Sonar Fixes (11) (#2223)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>